[gd_scene load_steps=4 format=3 uid="uid://bdvr3vygaik24"]

[ext_resource type="Theme" uid="uid://ngj4frvw6klg" path="res://main/ui/_theme/main_theme.tres" id="1_5j75e"]
[ext_resource type="Script" path="res://main/ui/components/demon_container/demon_container.gd" id="2_dmrvx"]
[ext_resource type="PackedScene" uid="uid://d1d6sis5a5ivg" path="res://main/ui/components/fighter_panel/FighterPanel.tscn" id="2_qrjmm"]

[node name="DemonContainer" type="VBoxContainer"]
theme = ExtResource("1_5j75e")
script = ExtResource("2_dmrvx")

[node name="ActivePartyContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2

[node name="FighterPanel" parent="ActivePartyContainer" instance=ExtResource("2_qrjmm")]
layout_mode = 2

[node name="FighterPanel2" parent="ActivePartyContainer" instance=ExtResource("2_qrjmm")]
layout_mode = 2

[node name="FighterPanel3" parent="ActivePartyContainer" instance=ExtResource("2_qrjmm")]
layout_mode = 2

[node name="FighterPanel4" parent="ActivePartyContainer" instance=ExtResource("2_qrjmm")]
layout_mode = 2

[node name="StockHolder" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8

[node name="StockContainer" type="VBoxContainer" parent="StockHolder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 73.0
grow_horizontal = 2

[node name="Label" type="Label" parent="StockHolder/StockContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Stored Demons"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="StockHolder/StockContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_vertical = 8
horizontal_scroll_mode = 2
vertical_scroll_mode = 3

[node name="InactivePartyContainer" type="HBoxContainer" parent="StockHolder/StockContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
